# cdec

./: Build.sh  ProjectHome.md  WelcomeCdec.md  build.sh  buildall.sh  cdec.sln
TestRunnerC/: CMakeLists.txt  RunnerDll.cpp  RunnerDll.h  TestRunnerC.cpp  TestRunnerC.vcxproj  stdafx.h
cdeccore/: CMakeLists.txt  cdeccore.cpp  cdeccore.vcxproj  cdeccore.vcxproj.filters  stdafx.cpp  stdafx.h  test_support.cpp  test_support.h
cdeccore/common/: console.cpp  converter.cpp  datetime.cpp  dynamiclib.cpp
cdeccore/crypto/: aesalg.cpp  aesalg.h  base64.cpp  md5.h  sha1.cpp
cdeccore/essential/: string.cpp
cdeccore/io/: directory.cpp  directory_linux.cpp  filewrap.h  filewrap_posix.cpp  filewrap_stdc.cpp  filewrap_win.cpp  mapping.cpp  stream.cpp  textreader.cpp  textwriter.cpp
cdeccore/json/: jsonparser.cpp  jsonwriter.cpp
cdeccore/text/: codeconv.h  encoding.cpp
cdeccore/xmlce/: domaccept.cpp  domaccept.h  parsecore.cpp  parsecore.h  xmlreader.cpp  xmlwriter.cpp
cdecegg/: cdecegg.cpp  cdecegg.vcxproj  cdecegg.vcxproj.filters  test_support.h
cdecegg/diagnostic/: debug_new.cpp
cdecegg/predef/: exception.cpp
curlcdec/: adapt_easy.h  cc_easy.cpp  curlcdec.vcxproj  curlcdec.vcxproj.filters  stdafx.cpp
docs/: main.css
docs/journal/: 080519-String.htm  081007-ImplementArray.html  120710-Refact.html  index.htm
docs/qman/: CH1-1-Introduction.html  CH2-4-SpecializedCollection.html  CH4-3-CurlCdec.html
httpserv/: httpserv.cpp  httpserv.vcxproj.filters  stdafx.h
import-win/curl-7.31.0/: version.txt
include/: cdeccore.h  cdecegg.h  curlcdec.h  httpserv.h  jnicdec.h  mysqlcdec.h  stavlcommon.h  zlibcdec.h
include/curlcdec/: curl_common.h  curl_easy.h  curl_response.h
include/jnicdec/: objectpool.h  valuebag.h
include/mysqlcdec/: connection.h  dbUtil.h  prepareStatement.h  resultset.h  statement.h
include/stavlcommon/: convertera.h  fastlogreader.h  logwriter.h
include/unittest/: testenv_impl.h
lzmacdec/: CMakeLists.txt  lzmacdec.cpp  lzmacdec.vcxproj  lzmacdec.vcxproj.filters  lzmalib.h  stdafx.cpp
mysqlcdec/: common.cpp  connection.cpp  connection.h  dbUtil.cpp  dbUtil.h  mysqlcdec.cpp  mysqlcdec.vcxproj  mysqlcdec.vcxproj.filters  pool.cpp  pool.h  prepareStatement.cpp  prepareStatement.h  resultset.cpp  statement.cpp  statement.h  stdafx.cpp  stdafx.h
mysqlcdec/test/: test_chp__mysql.cpp  test_chp_c--_mysql.cpp  test_connection_ly.cpp  test_operate_Ning.cpp  test_raw_basic.cpp  testenv.cpp  testenv.h
product/win32d/: LzmaLib.lib
stavlcommon/: CMakeLists.txt  fastlogreader.cpp  logwriter.cpp  stavlcommon.cpp  stavlcommon.vcxproj  stavlcommon.vcxproj.filters  stdafx.h
stavlcommon/test/: test_convertera.cpp  testenv.cpp  testenv.h
testers/HttpTransport/: CMakeLists.txt  HttpTransport.cpp  HttpTransport.vcxproj
testers/TestCurl/: TestCurl.cpp  TestCurl.vcxproj  TestCurl.vcxproj.filters
testers/TestCurlCdec/: CMakeLists.txt  TestCurlCdec.cpp  TestCurlCdec.vcxproj  TestCurlCdec.vcxproj.filters  stdafx.h
testers/TestHttpServer/: TestHttpServer.cpp  TestPage.html  stdafx.cpp
testers/TestMicroHttpd/: 01.cpp  02.cpp  03.cpp  05.cpp  TestMicroHttpd.vcxproj  TestMicroHttpd.vcxproj.filters  gm.sh  readme.txt
trunk/: Build.sh  buildall.sh  cdec.sln  readme.html
trunk/TestRunnerC/: TestRunnerC.vcxproj  TestRunnerC.vcxproj.filters  report.cpp  report.h  runner.cpp  runner.h  stdafx.cpp  stdafx.h
trunk/cdeccore/: CMakeLists.txt  cdeccore.vcxproj  cdeccore.vcxproj.filters  test_support.cpp  test_support.h
trunk/cdeccore/collection/test/: test_coll_array.cpp  test_coll_vector.cpp
trunk/cdeccore/common/: converter.cpp  datetime.cpp
trunk/cdeccore/common/test/: test_bitconverter.cpp  test_converter.cpp  test_datetime.cpp
trunk/cdeccore/crypto/: aesalg.cpp  aesalg.h  base64.cpp  crypto.cpp  md5.cpp  sha1.h
trunk/cdeccore/crypto/test/: test_crypto_aes.cpp  test_crypto_base64.cpp  test_crypto_hash.cpp
trunk/cdeccore/essential/: string.cpp
trunk/cdeccore/essential/test/: test_ess_ref.cpp  test_ess_string.cpp  test_ess_variant.cpp
trunk/cdeccore/io/: directory.cpp  filewrap.h  filewrap_posix.cpp  filewrap_win.cpp  memstream.cpp  stream.cpp  textreader.cpp
trunk/cdeccore/io/test/: test_io_directory.cpp  test_io_filestream.cpp  test_io_mapping.cpp  test_io_memstream.cpp  test_io_textreader.cpp  test_io_textrw.cpp  test_io_textwriter.cpp
trunk/cdeccore/json/: jsonparser.cpp  jsonwriter.cpp
trunk/cdeccore/json/test/: test_json_parser.cpp  test_json_writer.cpp
trunk/cdeccore/text/: codeconv.cpp
trunk/cdeccore/text/test/: test_text_encoding.cpp
trunk/cdeccore/xmlce/: xmldom.cpp  xmlreader.cpp
trunk/cdeccore/xmlce/test/: test_xmlce_dom.cpp  test_xmlce_read.cpp
trunk/cdecegg/: CMakeLists.txt  cdecegg.vcxproj  cdecegg.vcxproj.filters  stdafx.cpp  stdafx.h  test_support.cpp
trunk/curlcdec/: CMakeLists.txt  adapt_define.h  adapt_easy.cpp  cc_easy.cpp  curlcdec.cpp  curlcdec.vcxproj  stdafx.h
trunk/docs/: index.html  main.css
trunk/httpserv/: CMakeLists.txt  httpserv.cpp  httpserv.vcxproj  response.cpp  stdafx.cpp
trunk/include/: cdeccore.h  cdecegg.h  curlcdec.h  httpserv.h  lzmacdec.h  mysqlcdec.h  stavlcommon.h  unittest.h  zlibcdec.h
trunk/lzmacdec/: lzmacdec.vcxproj  stdafx.h
trunk/mysqlcdec/: CMakeLists.txt  common.cpp  common.h  connection.cpp  connection.h  dbUtil.cpp  dbUtil.h  mysqlcdec.cpp  mysqlcdec.vcxproj  mysqlcdec.vcxproj.filters  pool.cpp  pool.h  prepareStatement.cpp  prepareStatement.h  resultset.cpp  resultset.h  statement.cpp  statement.h  stdafx.h
trunk/stavlcommon/: logwriter.cpp  stavlcommon.cpp  stavlcommon.vcxproj  stavlcommon.vcxproj.filters  stdafx.h
trunk/zlibcdec/: stdafx.h  zlibcdec.cpp  (+1 more)
wiki/: WelcomeCdec.wiki
zlibcdec/: CMakeLists.txt  stdafx.cpp  zlibcdec.cpp  zlibcdec.vcxproj  zlibcdec.vcxproj.filters
(+191 files in other folders)
